--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             &nbsp
             <a href="./calculator.html">Calculator</a>
             &nbsp
-            <a href="./life.html">Life</a>
+            <a href="./particles.html">Particulate?</a>
         </nav>
     
         <br><br><br>
