--- a/particles.html
+++ b/particles.html
@@ -18,7 +18,7 @@
         <canvas style="background-color:GREY;">CThe game of Life</canvas>
     </div>
 
-    <script src="./life.js"></script>
+    <script src="./particles.js"></script>
 </body>
 </html>
 
