added driller game

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <a href="./calculator.html">Calculator</a>
             &nbsp
             <a href="./particles.html">Particulate?</a>
+            &nbsp
+            <a href="./drill.html">Drilling</a>
         </nav>
     
         <br><br><br>
