add control messages

--- a/particles.html
+++ b/particles.html
@@ -12,7 +12,9 @@
         <a href="./index.html">Home</a>
     </nav>
 
-    <br><br><br>
+    <br>
+    ctrl + click to place, w and s to increase/decrease mass
+    <br><br>
 
     <div style="text-align:center;">
         <canvas style="background-color:GREY;">CThe game of Life</canvas>
