--- a/snake.html
+++ b/snake.html
@@ -12,7 +12,9 @@
         <a href="./index.html">Home</a>
     </nav>
 
-    <br><br><br>
+    <br>
+    wasd controls
+    <br><br>
 
     <div style="text-align:center;">
         <canvas style="background-color:GREEN;">Snek Game</canvas>
